<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".activity_bjorn">

    <Button
        android:id="@+id/btAthelstanaBjorn"
        android:layout_width="207dp"
        android:layout_height="105dp"
        android:autoText="true"
        android:background="@drawable/athelstan"
        android:clickable="true"
        android:text="@string/nome_athelstan"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLagerthaBjorn" />

    <Button
        android:id="@+id/btFlokiBjorn"
        android:layout_width="207dp"
        android:layout_height="105dp"
        android:autoText="true"
        android:background="@drawable/floki"
        android:clickable="true"
        android:text="@string/nome_floki"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btRagnarBjorn" />

    <TextView
        android:id="@+id/tvVindoDeBjorn"
        android:layout_width="388dp"
        android:layout_height="41dp"
        android:text="@string/vindo_de"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAthelstanaBjorn" />

    <Button
        android:id="@+id/btRagnarBjorn"
        android:layout_width="205dp"
        android:layout_height="93dp"
        android:layout_marginTop="8dp"
        android:autoText="true"
        android:background="@drawable/ragnar"
        android:clickable="true"
        android:text="@string/nome_ragnar"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btLagerthaBjorn"
        android:layout_width="207dp"
        android:layout_height="93dp"
        android:layout_marginTop="8dp"
        android:autoText="true"
        android:background="@drawable/lagertha"
        android:clickable="true"
        android:text="@string/nome_Lagertha"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="361dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/nome_bjorn"
        android:textColor="@android:color/background_light"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="152dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/melhor_amigo"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="364dp"
        android:layout_height="244dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bjorn" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="357dp"
        android:layout_height="90dp"
        android:layout_marginTop="13dp"
        android:text="@string/bjorn_description"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>