<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".activity_athelstan">

    <Button
        android:id="@+id/btRagnarAthelstan"
        android:layout_width="207dp"
        android:layout_height="105dp"
        android:layout_marginTop="8dp"
        android:autoText="true"
        android:background="@drawable/ragnar"
        android:clickable="true"
        android:text="@string/nome_ragnar"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView1" />

    <Button
        android:id="@+id/btBjornAthelstan"
        android:layout_width="207dp"
        android:layout_height="105dp"
        android:layout_marginTop="8dp"
        android:autoText="true"
        android:background="@drawable/bjorn"
        android:clickable="true"
        android:text="@string/nome_bjorn"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView1" />

    <TextView
        android:id="@+id/TextView0"
        android:layout_width="364dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/nome_athelstan"
        android:textColor="@android:color/background_light"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="355dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/melhor_amigo"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="365dp"
        android:layout_height="270dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/athelstan" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="363dp"
        android:layout_height="105dp"
        android:layout_marginTop="8dp"
        android:text="@string/athelstan_description"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView0" />

    <TextView
        android:id="@+id/tvVindoDeAthelstan"
        android:layout_width="362dp"
        android:layout_height="66dp"
        android:text="@string/vindo_de"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btBjornAthelstan" />

</androidx.constraintlayout.widget.ConstraintLayout>