<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".activity_lagertha">

    <TextView
        android:id="@+id/tvVindoDeLagertha"
        android:layout_width="382dp"
        android:layout_height="51dp"
        android:text="@string/vindo_de"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btBjornLagertha" />

    <Button
        android:id="@+id/btRagnarLagertha"
        android:layout_width="207dp"
        android:layout_height="105dp"
        android:layout_marginTop="8dp"
        android:autoText="true"
        android:background="@drawable/ragnar"
        android:clickable="true"
        android:text="@string/nome_ragnar"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <Button
        android:id="@+id/btBjornLagertha"
        android:layout_width="207dp"
        android:layout_height="105dp"
        android:layout_marginTop="8dp"
        android:autoText="true"
        android:background="@drawable/bjorn"
        android:clickable="true"
        android:text="@string/nome_bjorn"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="359dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/nome_Lagertha"
        android:textColor="@android:color/background_light"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="353dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/melhor_amigo"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="365dp"
        android:layout_height="270dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lagertha" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="363dp"
        android:layout_height="105dp"
        android:layout_marginTop="8dp"
        android:text="@string/floki_description"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />
</androidx.constraintlayout.widget.ConstraintLayout>