<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btLagerthaMain"
        android:layout_width="207dp"
        android:layout_height="105dp"
        android:autoText="true"
        android:background="@drawable/logo"
        android:clickable="true"
        android:text="@string/nome_Lagertha"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btFloki"
        app:layout_constraintTop_toBottomOf="@+id/btRolloMain" />

    <Button
        android:id="@+id/btFlokiMain"
        android:layout_width="207dp"
        android:layout_height="105dp"
        android:autoText="true"
        android:background="@drawable/logo"
        android:clickable="true"
        android:text="@string/nome_floki"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btRagnarMain" />

    <Button
        android:id="@+id/btRagnarMain"
        android:layout_width="207dp"
        android:layout_height="105dp"
        android:autoText="true"
        android:background="@drawable/logo"
        android:clickable="true"
        android:text="@string/nome_ragnar"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAlthelstanMain" />

    <Button
        android:id="@+id/btBjornMain"
        android:layout_width="207dp"
        android:layout_height="105dp"
        android:autoText="true"
        android:background="@drawable/logo"
        android:clickable="true"
        android:text="@string/nome_bjorn"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btAthelstan"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btRolloMain"
        android:layout_width="207dp"
        android:layout_height="105dp"
        android:autoText="true"
        android:background="@drawable/logo"
        android:clickable="true"
        android:text="@string/nome_rollo"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btRagnar"
        app:layout_constraintTop_toBottomOf="@+id/btBjornMain" />

    <Button
        android:id="@+id/btAlthelstanMain"
        android:layout_width="207dp"
        android:layout_height="105dp"
        android:autoText="true"
        android:background="@drawable/logo"
        android:clickable="true"
        android:text="@string/nome_athelstan"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="447dp"
        android:layout_height="243dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@android:string/untitled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>