<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".activity_ragar">

    <TextView
        android:id="@+id/tvVindoDeRagnar"
        android:layout_width="396dp"
        android:layout_height="51dp"
        android:text="@string/vindo_de"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btFlokiRagnar" />

    <Button
        android:id="@+id/btLagerthaRagnar"
        android:layout_width="207dp"
        android:layout_height="105dp"
        android:layout_marginTop="8dp"
        android:autoText="true"
        android:background="@drawable/lagertha"
        android:clickable="true"
        android:text="@string/nome_Lagertha"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/btBjornRagnar"
        android:layout_width="207dp"
        android:layout_height="105dp"
        android:layout_marginTop="8dp"
        android:autoText="true"
        android:background="@drawable/bjorn"
        android:clickable="true"
        android:text="BJORN"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/btFlokiRagnar"
        android:layout_width="207dp"
        android:layout_height="105dp"
        android:autoText="true"
        android:background="@drawable/floki"
        android:clickable="true"
        android:text="@string/nome_floki"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btBjornRagnar" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="346dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/nome_ragnar"
        android:textColor="@android:color/background_light"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="351dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/melhor_amigo"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="377dp"
        android:layout_height="236dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ragnar" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="376dp"
        android:layout_height="83dp"
        android:layout_marginTop="8dp"
        android:text="@string/ragnar_description"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />
</androidx.constraintlayout.widget.ConstraintLayout>